pulse: Only filter ported input devices with no available ports

Leave portless devices alone.

Bug: 853693, b/79580580
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I0e505b0f87fdb2b416ca080ad104ea6710e2ec6a
Reviewed-on: https://chromium-review.googlesource.com/1104433
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Oskar Sundbom <ossu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568416}
Former-commit-id: 96352ebaff051b734e63f11a3877be91f7ecff20